# atma2023

./: .gitignore  README.md  pyproject.toml
src/: blending.py  inference.py  lgbm_tuner.py  train.py
src/configs/: debug.yaml  debug_lgb.yaml  exp1.yaml  exp10.yaml  exp100.yaml  exp101.yaml  exp102.yaml  exp103.yaml  exp104.yaml  exp105.yaml  exp106.yaml  exp107.yaml  exp108.yaml  exp109.yaml  exp11.yaml  exp110.yaml  exp111.yaml  exp112.yaml  exp113.yaml  exp114.yaml  exp115.yaml  exp116.yaml  exp117.yaml  exp118.yaml  exp12.yaml  exp13.yaml  exp14.yaml  exp15.yaml  exp16.yaml  exp17.yaml  exp18.yaml  exp19.yaml  exp2.yaml  exp20.yaml  exp21.yaml  exp22.yaml  exp23.yaml  exp24.yaml  exp25.yaml  exp26.yaml  (+87 more)
src/features/: create_bert_emb.ipynb  create_tfidf_svd.ipynb
src/memo/: EDA.ipynb
src/preprocess/: preprocess.py
