[tool.poetry]
name = "atma2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.17.3,<1.24"
pandas = "^2.0.3"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
wheel = "^0.40.0"
lightgbm = "<4.0"
ydata-profiling = "^4.3.1"
pytorch-lightning = "^2.0.5"
wandb = "^0.15.5"
transformers = "^4.30.2"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"
plotly = "^5.15.0"
mecab-python3 = "^1.0.6"
setuptools = "57.5.0"
gensim = "^4.3.1"
optuna = "^3.2.0"
cython = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
